refactor: rename student and teacher routes and controllers to siswa and guru for consistency
