# src/routes/guruRoutes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { updateProfile, getStudents, getExamResults, getSubmissionDetail, gradeUraian } from '../controllers/teacherController.js';
+import { updateProfile, getSiswa, getExamResults, getSubmissionDetail, gradeUraian } from '../controllers/guruController.js';
 import { authenticate, isGuru } from '../middlewares/authMiddleware.js';
 
 const router = express.Router();
@@ -8,7 +8,7 @@ router.use(authenticate);
 router.use(isGuru);
 
 router.patch('/profile', updateProfile);
-router.get('/students', getStudents);
+router.get('/siswa', getSiswa);
 router.get('/exam-results', getExamResults);
 
 // Manual Grading
